--- a/i3/config
+++ b/i3/config
@@ -20,6 +20,7 @@ font pango:Ubuntu Mono derivative Powerline 14
 
 # Auto start items
 exec compton
+exec feh --bg-scale ~/pexels-346529.jpg
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -40,10 +41,14 @@ bindsym $mod+Return exec st
 # kill focused window
 bindsym $mod+Shift+q kill
 # Launch emacs
-bindsym $mod+Shiftb exec emacs
+bindsym $mod+Shift+b exec emacs
+
+# Screenshot
+bindsym $mod+Shift+n exec scrot ~/screen.png
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# Also gruvbox theme
+bindsym $mod+d exec dmenu_run -nb '#282828' -nf '#ebdbb2' -sb '#458588' -sf '#282828' -l 15
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -170,7 +175,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-set $bgcolor #343536
+set $bgcolor #282828
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -181,11 +186,11 @@ bar {
 	colors {
 		
 		background $bgcolor
-		separator  #4885ed
+		separator  #d65d0e
 
 		#    		    border 	 background 	 text
-		focused_workspace  $bgcolor    	 $bgcolor 	 #4885ed
-		inactive_workspace #656769 	 #656769         #4885ed
+		focused_workspace  $bgcolor    	 $bgcolor 	 #d5c4a1
+		inactive_workspace #fabd2f 	 #282828         #d5c4a1
 
 		
 	}
