--- a/i3/i3blocks/config
+++ b/i3/i3blocks/config
@@ -2,16 +2,16 @@
 command=/home/gulkbag/.config/i3blocks/cpu_usage.sh
 interval=1
 label=CPU
-color=#f4c20d
+color=#fabd2f
 
 [date]
 command=date
 interval=1
-color=#db3236
+color=#fb4934
 
 [weather]
 command=curl "wttr.in/?format=%l:%20%c%20%t%20"
 interval=1800
-color=#3cba54
+color=#b9bb26
 
 
