--- a/i3/config
+++ b/i3/config
@@ -70,7 +70,7 @@ bindsym $mod+Right focus right
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+#bindsym $mod+Shift+semicolon move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -198,10 +198,12 @@ bar {
 
 for_window [class="^.*"] border pixel 0
 
-bindsym $mod+Ctrl+Right resize shrink width 1 px or 1 ppt
-bindsym $mod+Ctrl+Up    resize grow height 1 px or 1 ppt
-bindsym $mod+Ctrl+Down resize shrink height 1 px or 1 ppt
-bindsym $mod+Ctrl+Left resize grow width 1 px or 1 ppt
+bindsym $mod+Ctrl+Right         resize shrink width 10 px or 1 ppt
+bindsym $mod+Ctrl+Up            resize grow height 10 px or 1 ppt
+bindsym $mod+Ctrl+Down          resize shrink height 10 px or 1 ppt
+bindsym $mod+Ctrl+Left          resize grow width 10 px or 1 ppt
+
+bindsym $mod+Shift+semicolon    exec tabbed -c surf -e
 
 gaps inner 20
 gaps outer 20
