--- a/i3/i3blocks/config
+++ b/i3/i3blocks/config
@@ -5,12 +5,11 @@ label=CPU
 color=#fabd2f
 
 [date]
-label=📅
 command=echo $(date '+%Y %b %d %I:%M%p') 
 interval=1
 color=#fb4934
 
 [weather]
-command=curl "wttr.in/?format=%l:%20%c%20%t%20"
+command=curl "wttr.in/?format=%l:%20%C%20%t%20"
 interval=1800
 color=#b9bb26
