--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Ubuntu Mono derivative Powerline 14
+font pango:Ubuntu Mono derivative Powerline 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -181,19 +181,21 @@ set $bgcolor #282828
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-    status_command i3blocks -c ~/.config/i3blocks/config
-    position top
-    separator_symbol " >> "
-    colors {
-        background $bgcolor
-        separator  #d65d0e
+# bar {
+#     status_command i3blocks -c ~/.config/i3blocks/config
+#     position top
+#     separator_symbol " >> "
+#     colors {
+#         background $bgcolor
+#         separator  #d65d0e
 
-        #                   border      background  text
-        focused_workspace  $bgcolor    $bgcolor    #d5c4a1
-        inactive_workspace #fabd2f     #282828     #d5c4a1
-    }
-}
+#         #                   border      background  text
+#         focused_workspace  $bgcolor    $bgcolor    #d5c4a1
+#         inactive_workspace #fabd2f     #282828     #d5c4a1
+#     }
+# }
+
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 for_window [class="^.*"] border pixel 0
 
@@ -207,7 +209,7 @@ bindsym $mod+Shift+semicolon    exec tabbed -c surf -e
 bindsym $mod+Shift+x exec /home/gulkbag/.config/i3/prompt.sh "Do you want to shutdown?" sudo shutdown
 bindsym $mod+Shift+v exec /home/gulkbag/.config/i3/prompt.sh "Do you want to rebbot?" sudo reboot 
 
-gaps inner 20
-gaps outer 20
+gaps inner 10
+gaps outer 10
 
 exec feh --bg-scale ~/pexels-956999.jpg
