--- a/polybar/polybar/config-t3.ini
+++ b/polybar/polybar/config-t3.ini
@@ -28,7 +28,7 @@ shade7 = #E57373
 shade8 = #EF9A9A
 
 ;; Active Colors
-bground = #1D1F28
+bground = #881D1F28
 fground = #f7f7f7
 ;borderbg = #f7f7f7
 accent = #E53935
