--- a/i3/config
+++ b/i3/config
@@ -13,16 +13,14 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Ubuntu Mono derivative Powerline 8
+font pango:Hack Nerd Font 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 
 # Auto start items
-exec compton
-exec feh --bg-scale ~/WP/plane_mountains-HD.jpg
-exec_always --no-startup-id /home/gulkbag/.config/polybar/launch.sh
-
+exec --nos-startup-id compton
+exec --no-startup-id feh --bg-scale ~/WP/plane_mountains-HD.jpg
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -38,7 +36,8 @@ floating_modifier $mod
 bindsym $mod+Shift+m exec midori
 
 # start a terminal
-bindsym $mod+Return exec st
+# bindsym $mod+Return exec st
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -211,5 +210,7 @@ bindsym $mod+Shift+v exec /home/gulkbag/.config/i3/prompt.sh "Do you want to reb
 
 gaps inner 10
 gaps outer 40
+
+border_radius 5
 
 exec feh --bg-scale ~/pexels-956999.jpg
