--- a/polybar/polybar/config-t2.ini
+++ b/polybar/polybar/config-t2.ini
@@ -85,15 +85,14 @@ fixed-center = true
 offset-x = 5%
 offset-y = 1%
 width = 90%
-height = 22
+height = 30
 ;offset-x = 0%
 ;offset-y = 0%
 
 background = ${color.bground}
 foreground = ${color.fground}
 
-radius-top = 0.0
-radius-bottom = 0.0
+radius = 5.0
 
 overline-size = 2
 overline-color = ${color.accent}
@@ -101,7 +100,7 @@ overline-color = ${color.accent}
 ;border-bottom-size = 2
 ;border-color = ${color.borderbg}
 
-border-size = 3
+border-size = 0
 border-color = ${color.purple}
 
 padding = 0
@@ -110,7 +109,7 @@ module-margin-right = 0
 
 font-0 = "Shure Tech Mono Nerd Font:size=12;2"
 font-1 = "Shure Tech Mono Nerd Font:size=12;2"
-font-2 = Shure Tech Mono Nerd Font:style=Medium:size=12;3
+font-2 = Shure Tech Mono Nerd Font:size=18;3
 
 modules-left = launcher left1 title cpu left2
 modules-center = workspaces
