--- a/polybar/polybar/config.ini
+++ b/polybar/polybar/config.ini
@@ -18,20 +18,20 @@
 [color]
 
 ; Active Shade 
-shade1 = #BF360C
-shade2 = #D84315
-shade3 = #E64A19
-shade4 = #F4511E
-shade5 = #FF5722
-shade6 = #FF7043
-shade7 = #FF8A65
-shade8 = #FFAB91
+shade1 = #0D47A1
+shade2 = #1565C0
+shade3 = #1976D2
+shade4 = #1E88E5
+shade5 = #2196F3
+shade6 = #42A5F5
+shade7 = #64B5F6
+shade8 = #90CAF9
 
 ;; Active Colors
 bground = #881D1F28
 fground = #f7f7f7
 ;borderbg = #f7f7f7
-accent = #F4511E
+accent = #1E88E5
 modulefg = #f7f7f7
 modulefg-alt = #f7f7f7
 
