--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,14 +7,19 @@ font_family Hack Nerd Font
 bold_font         auto
 italic_font       auto
 bold_italic_font  auto
-font_size         12.0
+font_size         10.0
 
 disable_ligatures never
 
-window_padding_width 5.0
+window_padding_width  10.0
+cursor_shape          underline
+initial_window_width  100
+initial_window_height 100
 
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
+map ctrl+0x1b change_font_size all +2.0                                                                           
+map ctrl+0x2c change_font_size all -2.0
 
 # Base16 Brush Trees Dark - kitty color config
 # Abraham White &lt;abelincoln.white@gmail.com&gt;
