--- a/polybar/config-t1.ini
+++ b/polybar/config-t1.ini
@@ -28,7 +28,7 @@ shade7 = #64B5F6
 shade8 = #90CAF9
 
 ;; Active Colors
-bground = #1D1F28
+bground = #881D1F28
 fground = #f7f7f7
 ;borderbg = #f7f7f7
 accent = #1E88E5
