--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -18,22 +18,22 @@
 [color]
 
 ; Active Shade 
-shade1 = #BF360C
-shade2 = #D84315
-shade3 = #E64A19
-shade4 = #F4511E
-shade5 = #FF5722
-shade6 = #FF7043
-shade7 = #FF8A65
-shade8 = #FFAB91
+shade1 = #B71C1C
+shade2 = #C62828
+shade3 = #D32F2F
+shade4 = #E53935
+shade5 = #EE413D
+shade6 = #EF5350
+shade7 = #E57373
+shade8 = #EF9A9A
 
 ;; Active Colors
-bground = #881D1F28
+bground = #88f7f7f7
 fground = #f7f7f7
 ;borderbg = #f7f7f7
-accent = #F4511E
+accent = #E53935
 modulefg = #f7f7f7
-modulefg-alt = #f7f7f7
+modulefg-alt = #1D1F28
 
 ;; Other
 trans = #00000000
@@ -85,15 +85,14 @@ fixed-center = true
 offset-x = 5%
 offset-y = 1%
 width = 90%
-height = 22
+height = 30
 ;offset-x = 0%
 ;offset-y = 0%
 
 background = ${color.bground}
 foreground = ${color.fground}
 
-radius-top = 0.0
-radius-bottom = 0.0
+radius = 5.0
 
 overline-size = 2
 overline-color = ${color.accent}
@@ -101,7 +100,7 @@ overline-color = ${color.accent}
 ;border-bottom-size = 2
 ;border-color = ${color.borderbg}
 
-border-size = 3
+border-size = 0
 border-color = ${color.purple}
 
 padding = 0
@@ -110,7 +109,7 @@ module-margin-right = 0
 
 font-0 = "Shure Tech Mono Nerd Font:size=12;2"
 font-1 = "Shure Tech Mono Nerd Font:size=12;2"
-font-2 = Shure Tech Mono Nerd Font:style=Medium:size=12;3
+font-2 = Shure Tech Mono Nerd Font:size=18;3
 
 modules-left = launcher left1 title cpu left2
 modules-center = workspaces
