--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -111,9 +111,9 @@ font-0 = "Shure Tech Mono Nerd Font:size=12;2"
 font-1 = "Shure Tech Mono Nerd Font:size=12;2"
 font-2 = Shure Tech Mono Nerd Font:size=18;3
 
-modules-left = launcher left1 title cpu left2
+modules-left = launcher left1 title left2 cpu left3
 modules-center = workspaces
-modules-right = right7 colors right6 alsa right5 battery right4 backlight right3 network right2 date right1 powermenu
+modules-right = right7 colors right6 alsa right5 mem right4 backlight right3 network right2 date right1 powermenu
 
 separator =
 spacing = 0
@@ -161,8 +161,14 @@ content = "%{T3}%{T-}"
 
 [module/left2]
 type = custom/text
-content-background = ${color.bground}
+content-background = ${color.shade3}
 content-foreground = ${color.shade2}
+content = "%{T3}%{T-}"
+
+[module/left3]
+type = custom/text
+content-background = ${color.bground}
+content-foreground = ${color.shade3}
 content = "%{T3}%{T-}"
 
 #+++++++++++++++++++++++++++++++++++++++
@@ -219,7 +225,7 @@ content-background = ${color.shade1}
 content-foreground = ${color.modulefg}
 content-padding = 1
 
-click-left = dmenu_run -b -l 5 -p Search -fn "Misc Termsyn" -nb "#1D1F28" -nf "#f7f7f7" -sb "#1E88E5" -sf "#202020"
+click-left = dmenu_run -b -l 5 -p Search -fn "Hack Nerd Font" -nb "#1D1F28" -nf "#f7f7f7" -sb "#1E88E5" -sf "#202020"
 ;click-left = rofi -show run -fullscreen True -lines 5 -line-margin 5 -padding 300 -bw 0
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -451,12 +457,24 @@ click-right = ~/.config/polybar/scripts/type-switch.sh &
 [module/cpu]
 type = internal/cpu
 interval = 0.5
-format-background = ${color.shade2}
+format-background = ${color.shade3}
 format-foreground = ${color.modulefg}
-content-background = ${color.shade2}
+content-background = ${color.shade3}
 content-foreground = ${color.modulefg}
 label = CPU %percentage%%
 
+[module/mem]
+type = internal/memory
+interval = 3
+label = RAM %gb_used%/%gb_free%
+format-background = ${color.shade5}
+format-foreground = ${color.modulefg}
+content-background = ${color.shade5}
+content-foreground = ${color.modulefg}
+content-padding = 1
+format-padding = 1
+
+click-left = notify-send "$(ps axch -o cmd:15,%mem --sort=-%mem | head)"
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
