--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -225,7 +225,7 @@ content-background = ${color.shade1}
 content-foreground = ${color.modulefg}
 content-padding = 1
 
-click-left = dmenu_run -b -l 5 -p Search -fn "Hack Nerd Font" -nb "#1D1F28" -nf "#f7f7f7" -sb "#1E88E5" -sf "#202020"
+click-left = dmenu_run -b -l 5 -p Search -fn "Hack Nerd Font" -nb "#181818" -nf "#d8d8d8" -sb "#d8d8d8" -sf "#181818"
 ;click-left = rofi -show run -fullscreen True -lines 5 -line-margin 5 -padding 300 -bw 0
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -474,7 +474,7 @@ content-foreground = ${color.modulefg}
 content-padding = 1
 format-padding = 1
 
-click-left = notify-send "$(ps axch -o cmd:15,%mem --sort=-%mem | head)"
+click-left = ~/.config/polybar/scripts/topmem.sh &
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
