--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,11 +3,11 @@
 # Date              : 05.08.2019
 # Last Modified Date: 05.08.2019
 # Last Modified By  : Ahmed Nasser <ahmednasser@gmail.com>
-font_family Hack Nerd Font
+font_family IBM Plex Mono Medium
 bold_font         auto
 italic_font       auto
 bold_italic_font  auto
-font_size         10.0
+font_size         11.0
 
 disable_ligatures never
 
