--- a/polybar/config-t2.ini
+++ b/polybar/config-t2.ini
@@ -107,9 +107,9 @@ padding = 0
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = "Shure Tech Mono Nerd Font:size=12;2"
-font-1 = "Shure Tech Mono Nerd Font:size=12;2"
-font-2 = Shure Tech Mono Nerd Font:size=18;3
+font-0 = "Hack Nerd Font:size=12;2"
+font-1 = "Hack Nerd Font:size=12;2"
+font-2 = Hack Nerd Font:size=18;3
 
 modules-left = launcher left1 title left2 cpu left3
 modules-center = workspaces
@@ -374,7 +374,7 @@ animation-charging-framerate = 750
 type = internal/date
 interval = 1.0
 
-time =  %I:%M %p
+time = %I:%M %p
 time-alt =  %d/%m/%Y%
 
 format = <label>
